--- a/app/src/main/res/layout/activity_gewonnen.xml
+++ b/app/src/main/res/layout/activity_gewonnen.xml
@@ -9,8 +9,8 @@
 
     <Button
         android:id="@+id/bt_weiterSeekarte"
-        android:layout_width="135dp"
-        android:layout_height="45dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/roundbutton"
         android:text="@string/bt_gewonnen"
         android:textColor="@color/colorBackground"
@@ -20,6 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.973" />
+
 
     <TextView
         android:id="@+id/tv_gewonnen"
@@ -33,20 +34,19 @@
         app:fontFamily="@font/geschwungen"
         app:layout_constraintBottom_toTopOf="@+id/iv_schiff"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
+        app:layout_constraintVertical_bias="0.325" />
 
     <ImageView
         android:id="@+id/iv_schiff"
         android:layout_width="354dp"
         android:layout_height="260dp"
-        android:layout_marginBottom="132dp"
+        android:layout_marginBottom="180dp"
         android:contentDescription="@string/desc"
         app:layout_constraintBottom_toTopOf="@+id/bt_weiterSeekarte"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/piratenschiff" />
 
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:text="Avarage"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
