--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,13 @@
         android:id="@+id/iv_MainBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="-5dp"
         android:contentDescription="@string/desc"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/logokarte" />
 
     <com.airbnb.lottie.LottieAnimationView
@@ -28,6 +27,7 @@
 
         app:layout_constraintBottom_toBottomOf="@+id/iv_MainBackground"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
